--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,9 @@
 			{% endblock %}
 		</title>
 		{% block style %}{% endblock %}
-		{% block script %}{% endblock %}
+		<script src="/js/settings.js"></script>
+		{% block script %}
+		{% endblock %}
 	</head>
 	<body>
 		{% block content %}{% endblock %}
