--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -11,9 +11,9 @@
             <h2 class="error-subtitle">Причина: {{message}}</h2>
             <h2 class="error-links">Вы можете посетить:</h2>
             <div class="links">
-                <a class="login" href="/login">Вход</a>
+                <a class="login error" href="/login">Вход</a>
                 <a class="register" href="/signup">Pегистрация</a> 
-                <a class="menu" href="/menu">Меню</a>
+                <a class="menu error" href="/menu">Меню</a>
             </div>
         </div>
     </div>
