--- a/templates/game/game.html.twig
+++ b/templates/game/game.html.twig
@@ -11,14 +11,14 @@
 			<div class="wrapper-game">
 				<div class="wrapper-field">
 					<div class="game__buffer">
-						<p class="title">буффер</p>
+						<p class="title buffer">буффер</p>
 						<div class="buffer-wrapper">
 							<img class="buffer__figure" src="" alt="figure">
 						</div>
 					</div>
 					<canvas id="game"></canvas>
 					<div class="next__figure">
-						<p class="title">Следующие</p>
+						<p class="title next-figures">Следующие</p>
 						<div class="wrapper-figures">
 							<img class="figure" src="" alt="figure">
 							<img class="figure" src="" alt="figure">
@@ -40,13 +40,13 @@
 			</div>
 		</main>
 		<div class="instruction">
-			<h1>инструкция</h1>
-			<p class="instruction__text">движения по сторонам - соответствующие стрелочки или клавиши "ф" и "в"</p>
-			<p class="instruction__text">ускорение падения - стрелочка вниз или кнопка "ы"</p>
-			<p class="instruction__text">моментальная установка - пробел</p>
-			<p class="instruction__text">поворот фигуры по часовой стрелке - клавиша "ц"</p>
-			<p class="instruction__text">использование буффера - левый шифт (фигуры поменяются местами, обратно можно будет поменять только следующую фигуру)</p>
-			<p class="instruction__text">пауза - клавиша "з"</p>
+			<h1 class="instruction-title">инструкция</h1>
+			<p class="instruction__text horizontal">движения по сторонам - соответствующие стрелочки или клавиши "ф" и "в"</p>
+			<p class="instruction__text nitro">ускорение падения - стрелочка вниз или кнопка "ы"</p>
+			<p class="instruction__text drop">моментальная установка - пробел</p>
+			<p class="instruction__text rotate">поворот фигуры по часовой стрелке - клавиша "ц"</p>
+			<p class="instruction__text buffer">использование буффера - левый шифт (фигуры поменяются местами, обратно можно будет поменять только следующую фигуру)</p>
+			<p class="instruction__text pause">пауза - клавиша "з"</p>
 		</div>
 	</body>
 	<script src="/js/static/images.js"></script>
