--- a/templates/multiplayer/lobby.html.twig
+++ b/templates/multiplayer/lobby.html.twig
@@ -22,7 +22,7 @@
 				</div>
 				<div class="settings">
 					<div class="settings__size">
-						<p class="settings__text">размер поля:
+						<p class="settings__text size">размер поля:
 						</p>
 						<div class="setting">
 							<div class="wrapper-setting">
@@ -33,7 +33,7 @@
 						</div>
 					</div>
 					<div class="settings__music">
-						<p class="settings__text">музыка:
+						<p class="settings__text music">музыка:
 						</p>
 						<div class="setting">
 							<div class="wrapper-setting">
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 					<div class="settings__complexity">
-						<p class="settings__text">сложность:
+						<p class="settings__text complexity">сложность:
 						</p>
 						<div class="setting">
 							<div class="wrapper-setting">
@@ -55,7 +55,7 @@
 						</div>
 					</div>
 					<div class="settings__background">
-						<p class="settings__text">задний фон:
+						<p class="settings__text background">задний фон:
 						</p>
 						<div class="setting">
 							<div class="wrapper-setting">
