--- a/templates/select_modes/select-classic-mode.html.twig
+++ b/templates/select_modes/select-classic-mode.html.twig
@@ -43,30 +43,30 @@
 				<div class="links">
 					<div class="link">
 						<div class="link__text">
-							<h1 class="link__title">
+							<h1 class="link__title small">
 								холоп
 							</h1>
-							<p class="link__subtitle">
+							<p class="link__subtitle small">
 								маленький размер поля
 							</p>
 						</div>
 					</div>
 					<div class="link">
 						<div class="link__text">
-							<h1 class="link__title">
+							<h1 class="link__title medium">
 								крестьянин
 							</h1>
-							<p class="link__subtitle">
+							<p class="link__subtitle medium">
 								классический размер поля
 							</p>
 						</div>
 					</div>
 					<div class="link">
 						<div class="link__text">
-							<h1 class="link__title">
+							<h1 class="link__title large">
 								боярин
 							</h1>
-							<p class="link__subtitle">
+							<p class="link__subtitle large">
 								большой размер поля
 							</p>
 						</div>
