--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -12,7 +12,7 @@
 		<div class="title">
 			<img class="logo" src="/images/logo.svg">
 		</div>
-		<div class="login">
+		<div class="login-wrapper">
 			<p class="login__title">добро пожаловать в славянский тетрис!</p>
 			{{ form_start(form, { 'attr' : { 'class': 'login-input' }})}}
 			<label for="register_user_input_login" hidden>Login</label>
