--- a/templates/game/game-over.html.twig
+++ b/templates/game/game-over.html.twig
@@ -13,9 +13,9 @@
 			<div class="results">
 				<p class="result-title">финальный счет</p>
 				<p class="score">{{lastScore}}</p>
-				<p class="result-title">личный счет</p>
+				<p class="result-title max">личный счет</p>
 				<p class="score">{{maxScore}}</p>
-				<p class="result-title">молодец! ещё немного! держи мотивирующее видео!</p>
+				<p class="result-title description">молодец! ещё немного! держи мотивирующее видео!</p>
 				<div class="video-placeholder">
 					<video controls height="300" poster="/images/cats.jpg">
 						<source src="/video/ricroll.mp4" type="video/mp4">
@@ -23,10 +23,10 @@
 					</video>
 				</div>
 				<a href = "/game" class="link again">
-					<h1 class="link__header">сыграть заново</h1>
+					<h1 class="link__header again">сыграть заново</h1>
 				</a>
 				<a href="/menu" class="link">
-					<h1 class="link__header">вернуться в меню</h1>
+					<h1 class="link__header menu">вернуться в меню</h1>
 				</a>
 			</div>
 
