--- a/templates/mini-profile.html.twig
+++ b/templates/mini-profile.html.twig
@@ -5,9 +5,9 @@
             <p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
         </div>
         <div class="user-profile__exit">
-            <button class="exit">Exit</button>
+            <button class="exit">Выйти</button>
             {% if not user or not user.login %}
-                <a class="full-profile" href="/">Profile</a>
+                <a class="full-profile" href="/">Профиль</a>
             {% else %}
                 <a class="full-profile" href="/profile/{{user.login}}">Profile</a>
             {% endif %}
@@ -16,17 +16,17 @@
     </div>
     <div class="statistics">
         <div class="max-score">
-            <p class="statistics__text">максимум очков</p>
+            <p class="statistics__text score">максимум очков</p>
             <div class="line"></div>
             <p>{{player.maxScore ?? '0'}}</p>
         </div>
         <div class="count-win">
-            <p class="statistics__text">всего побед</p>
+            <p class="statistics__text vincount">всего побед</p>
             <div class="line"></div>
             <p>{{player.winCount ?? '0'}}</p>
         </div>
         <div class="count-game">
-            <p class="statistics__text">всего игр</p>
+            <p class="statistics__text countgame">всего игр</p>
             <div class="line"></div>
             <p>{{player.gameCount ?? '0'}}</p>
         </div>               
