смержили с димой твиг шаблоны и все поправили

--- a/templates/multiplayer/lobby.html.twig
+++ b/templates/multiplayer/lobby.html.twig
@@ -71,6 +71,6 @@
 		<div class="start-game-panel">
 			<button class="start-game">начать игру</button>
 		</div>
-	<script src="/js/lobby.js"></script>
-	<script src="/js/lobby-socket.js"></script>
+	<script src="/js/menu/lobby.js"></script>
+	<script src="/js/multiplayer/lobby-socket.js"></script>
 {% endblock %}
