--- a/templates/multiplayer/multiplayer.html.twig
+++ b/templates/multiplayer/multiplayer.html.twig
@@ -14,7 +14,7 @@
                 <p class="player_name">{{ user.login }}</p>
                 <div class="main-field">
                     <div class="game__buffer"> 
-                        <p class="title">буффер</p>
+                        <p class="title buffer">буффер</p>
                         <div class="buffer-wrapper">
                             <img class="buffer__figure" src="" alt="figure">
                         </div>
@@ -22,7 +22,7 @@
                     <canvas id="game">    
                     </canvas>
                     <div class="next__figure">
-                        <p class="title">следующие</p>
+                        <p class="title next">следующие</p>
                         <div class="wrapper-figures">
                             <img class="figure"  src="" alt="figure">
                             <img class="figure"  src="" alt="figure">
