вернул скрипт конца игры в мультиплеере

--- a/templates/multiplayer/game-over-multi.html.twig
+++ b/templates/multiplayer/game-over-multi.html.twig
@@ -51,5 +51,5 @@
 		{% include 'mini-profile.html.twig' %}	
 	</div>
 	<script src="/js/game/game_over.js"></script>
-	<script src="/js/mini-profile.js"></script>
+	<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
