сделал настройки игры

--- a/templates/game_modes/blitz.html.twig
+++ b/templates/game_modes/blitz.html.twig
@@ -12,14 +12,14 @@
 		<div class="wrapper-game">
 			<div class="wrapper-field">
 				<div class="game__buffer">
-					<p class="title">буффер</p>
+					<p class="title buffer">буффер</p>
 					<div class="buffer-wrapper">
 						<img class="buffer__figure" src="" alt="figure">
 					</div>
 				</div>
 				<canvas id="game"></canvas>
 				<div class="next__figure">
-					<p class="title">Следующие</p>
+					<p class="title next-figures">Следующие</p>
 					<div class="wrapper-figures">
 						<img class="figure" src="" alt="figure">
 						<img class="figure" src="" alt="figure">
