--- a/public/css/game.css
+++ b/public/css/game.css
@@ -17,11 +17,16 @@
     background-color: white;
 }
 
+body{
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .main {
     width: 100%;
     height: 100vh;
-    background-image: url(/images/bg.png);
-    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
