--- a/public/css/select.css
+++ b/public/css/select.css
@@ -10,35 +10,41 @@
     text-transform: uppercase;
 }
 
-.bg {
+body{
+    width: 100%;
     height: 100vh;
-    background: url(/images/bg.png) no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
-.bg_dark {
+/* .bg {
+    height: 100vh;
+    background: url(/images/bg.png) no-repeat;
+    background-size: cover;
+} */
+
+/* .bg_dark {
     background: url(/images/dark-bg.png) no-repeat;
     background-size: cover;
-}
+} */
 
 .settings {
     width: 40px;
     height: 40px;
-    display: none;
 }
 
 .header {
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     padding: 25px;
 }
 
-.logo {
+/* .logo {
     
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
-}
+} */
 
 .profile {
     height: 60px;
