--- a/templates/select_modes/select-classic-mode.html.twig
+++ b/templates/select_modes/select-classic-mode.html.twig
@@ -11,67 +11,67 @@
 	<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
 {% block content %}
-		<div class="bg bg_dark">
-			<div class="header">
-				<img src="/images/settings.png" alt="settings" class="settings"/>
-				<img src="/images/logo.png" alt="logo" class="logo"/>
-				<div class="profile">
-					{% if not user or not user.login %}
-						<a href="{{ path('register') }}">
-							<div class="profile">
-								<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
-								<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-							</div>
-						</a>
-					{% else %}
-						<div class="profile">
-							<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
-							<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-						</div>
-					{% endif %}
-				</div>
-			</div>
-			<div class="select">
-				<a href="/select_solo_mode">
-					<div class="back">
-						<p class="back__button">
-							назад
-						</p>
+	<div class="header">
+		<a href="/settings">
+			<img src="/images/settings.png" alt="settings" class="settings"/>
+		</a>
+		<img src="/images/logo.png" alt="logo" class="logo"/>
+		<div class="profile">
+			{% if not user or not user.login %}
+				<a href="{{ path('register') }}">
+					<div class="profile">
+						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
 				</a>
-				<div class="links">
-					<div class="link">
-						<div class="link__text">
-							<p class="link__title small">
-								холоп
-							</p>
-							<p class="link__subtitle small">
-								маленький размер поля
-							</p>
-						</div>
-					</div>
-					<div class="link">
-						<div class="link__text">
-							<p class="link__title medium">
-								крестьянин
-							</p>
-							<p class="link__subtitle medium">
-								классический размер поля
-							</p>
-						</div>
-					</div>
-					<div class="link">
-						<div class="link__text">
-							<p class="link__title large">
-								боярин
-							</p>
-							<p class="link__subtitle large">
-								большой размер поля
-							</p>
-						</div>
-					</div>
+			{% else %}
+				<div class="profile">
+					<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+					<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+				</div>
+			{% endif %}
+		</div>
+	</div>
+	<div class="select">
+		<a href="/select_solo_mode">
+			<div class="back">
+				<p class="back__button">
+					назад
+				</p>
+			</div>
+		</a>
+		<div class="links">
+			<div class="link">
+				<div class="link__text">
+					<p class="link__title small">
+						холоп
+					</p>
+					<p class="link__subtitle small">
+						маленький размер поля
+					</p>
 				</div>
 			</div>
-			{% include 'mini-profile.html.twig' %}
-		</div>	
+			<div class="link">
+				<div class="link__text">
+					<p class="link__title medium">
+						крестьянин
+					</p>
+					<p class="link__subtitle medium">
+						классический размер поля
+					</p>
+				</div>
+			</div>
+			<div class="link">
+				<div class="link__text">
+					<p class="link__title large">
+						боярин
+					</p>
+					<p class="link__subtitle large">
+						большой размер поля
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	{% include 'mini-profile.html.twig' %}
 {% endblock %}
