убрал макс высоту в пикселях и переименовал блок в странцие ошибок

--- a/public/css/game-over-multi.css
+++ b/public/css/game-over-multi.css
@@ -119,7 +119,7 @@
     justify-content: center;
     width: 100%; 
     align-items: flex-end;
-    max-height: 400px;
+    max-height: 40%;
 }
 
 .players::-webkit-scrollbar {
