--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -8,7 +8,7 @@
 {% block content %}
 	<div class="bg">
         <img src="/images/logo.png" alt="logo" class="logo">
-        <div class="error">
+        <div class="error-block">
             <h1 class="error-title">Ошибка №{{code}}</h1>
             <h2 class="error-subtitle">Причина: {{message}}</h2>
             <h2 class="error-links">Вы можете посетить:</h2>
