после игры возврат в тот же режим, а не в классический

--- a/templates/game/game-over.html.twig
+++ b/templates/game/game-over.html.twig
@@ -24,9 +24,9 @@
 						Ваш браузер не поддерживает встроенные видео :(
 					</video>
 				</div>
-				<a href = "/game" class="link again">
-					<p class="link__header again">сыграть заново</p>
-				</a>
+				<div class="link">
+					<p class="link__header again" id="link__back">сыграть заново</p>
+				</div>
 				<a href="/menu" class="link">
 					<p class="link__header menu">вернуться в меню</p>
 				</a>
