--- a/templates/multiplayer/game-over-multi.html.twig
+++ b/templates/multiplayer/game-over-multi.html.twig
@@ -50,6 +50,6 @@
 		</a>
 		{% include 'mini-profile.html.twig' %}	
 	</div>
-	<script src="/js/game/game_over.js"></script>
+	<script src="/js/game/game_over_multi.js"></script>
 	<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
