--- a/public/css/game-over.css
+++ b/public/css/game-over.css
@@ -29,6 +29,7 @@
     border-right: 3px solid #1d3220;
     padding-right: 20px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .link__header {
