--- a/templates/game/game.html.twig
+++ b/templates/game/game.html.twig
@@ -4,7 +4,7 @@
 	Tetris
 {% endblock %}
 {% block style %}
-	<link rel="stylesheet" href="/css/game.css"/>
+	<link rel="stylesheet" href="/css/game.css"/><link rel="stylesheet" href="/css/swipe-events.css"/>
 {% endblock %}
 {% block content %}
 
@@ -41,15 +41,7 @@
 				</div>
 			</div>
 		</main>
-		<div class="instruction">
-			<h1 class="instruction-title">инструкция</h1>
-			<p class="instruction__text horizontal">движения по сторонам - соответствующие стрелочки или клавиши "ф" и "в"</p>
-			<p class="instruction__text nitro">ускорение падения - стрелочка вниз или кнопка "ы"</p>
-			<p class="instruction__text drop">моментальная установка - пробел</p>
-			<p class="instruction__text rotate">поворот фигуры по часовой стрелке - клавиша "ц"</p>
-			<p class="instruction__text buffer">использование буффера - левый шифт (фигуры поменяются местами, обратно можно будет поменять только следующую фигуру)</p>
-			<p class="instruction__text pause">пауза - клавиша "з"</p>
-		</div>
+		{% include 'instruction.html.twig' %}
 	<script src="/js/static/images.js"></script>
 	<script src="/js/static/figures.js"></script>
 	<script src="/js/game/figure.js"></script>
