--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -91,56 +91,34 @@ body {
     white-space: nowrap
 }
 
-.wrapper{
-    max-width: 65%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-.list-score {
-    width: 100%;
-    max-height: 70%;
-    overflow-y: scroll;
-}
-
-.list-score::-webkit-scrollbar {
-    width: 5px;
-    background-color: #1a161d;
-}
-
-.list-score::-webkit-scrollbar-thumb {
-    width: 5px;
-    border-radius: 10px;
-    background-color: #243e25;
-}
-
-.list-score::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    background-color: #1a161d;
-}
-
-.score {
+.achievement__item {
     width: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
     box-sizing: border-box;
     padding: 14px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     background-color: #1a161d;
     border-top: 3px solid #453351;
     border-left: 3px solid #392e40;
     border-bottom: 3px solid #0a080b;
+    border-right: 3px solid #0a080b;
+    border-radius: 30px;
 }
 
-.score__title {
+.achievement__title {
     color: #dac8e7;
     font-size: 32px;
 }
 
-.score__description {
+.achievement__image
+{
+    width: 64px;
+    height: 64px;
+}
+
+.achievement__description {
     color: #7c6b88;
     font-size: 28px;
 }
@@ -165,3 +143,34 @@ body {
     font-size: 32px;
     color: #fff;
 }
+
+.other-information
+{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.slider-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    margin-right: 30vw;
+  }
+  
+  .achievement {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .prev-button,
+  .next-button {
+    transform: translateY(-50%);
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    color: white;
+  }
