--- a/templates/game/game.html.twig
+++ b/templates/game/game.html.twig
@@ -51,4 +51,5 @@
 	<script src="/js/game/game.js"></script>
 	<script src="/js/game/game_init.js"></script>
 	<script src="/js/game/game_end.js"></script>
+	<script src="/js/swipe_events.js"></script>
 {% endblock %}
