--- a/templates/game_modes/blitz.html.twig
+++ b/templates/game_modes/blitz.html.twig
@@ -54,4 +54,5 @@
 	<script src="/js/game/game.js"></script>
 	<script src="/js/game/blitz.js"></script>
 	<script src="/js/game/game_end.js"></script>
+	<script src="/js/swipe_events.js"></script>
 {% endblock %}
