--- a/templates/game_modes/koop.html.twig
+++ b/templates/game_modes/koop.html.twig
@@ -48,4 +48,5 @@
 	<script src="/js/game/koop-game.js"></script>
 	<script src="/js/game/init-game.js"></script>
 	<script src="/js/game/game-end.js"></script>
+	<script src="/js/swipe_events.js"></script>
 {% endblock %}
