--- a/templates/multiplayer/multiplayer.html.twig
+++ b/templates/multiplayer/multiplayer.html.twig
@@ -53,4 +53,5 @@
     <script src="/js/game/game.js"></script>
     <script src="/js/game/game_end.js"></script>
     <script src="/js/multiplayer/multiplayer_game.js"></script>
+    <script src="/js/swipe_events.js"></script>
 {% endblock %}
